[package]
name = "fuzzy_log"
version = "0.1.0"
authors = ["J <joshua.lockerman@yale.edu>"]

[dependencies]
bitflags = "0.4"
bit-set = "0.4.0"
byteorder = "1"
custom_derive = "0.1"
deque = "0.3.1"
grabbag_macros = "0.1"
newtype_derive = "0.1"
uuid = { version = "0.4", features = ["v4"] }
lazycell = "0.5.0"
libc = "0.2"
linked-hash-map ="0.3.0"
log = "0.3"
rand = "0.3"
rustc-serialize = "0.3"
time = "0.1"
mio = "0.6"
nix = "*"
net2 = "0.2"
env_logger = "0.3"

[features]
no_trace = ["log/max_level_info"]
print_stats = []

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
