[package]
name = "fuzzy_log"
version = "0.1.0"
authors = ["J <joshua.lockerman@yale.edu>"]

[dependencies]
bit-set = "0.4.0"
byteorder = "1"
deque = "0.3.1"
#grabbag_macros = "0.1"
fuzzy_log_packets = {path = "./fuzzy_log_packets"}
fuzzy_log_util = {path = "./fuzzy_log_util"}
fuzzy_log_server = {path = "./fuzzy_log_server"}
uuid = { version = "0.4", features = ["v4"] }
lazycell = "0.5.0"
libc = "0.2"
log = "0.3"
rand = "0.3"
rustc-serialize = "0.3"
time = "0.1"
toml = "0.2"
mio = "0.6.6"
nix = "*"
net2 = "0.2"
env_logger = "0.3"
evmap = "0.6.4"

[features]
no_trace = ["log/max_level_info"]
print_stats = []
debug_no_drop = []

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'

[workspace]
exclude = ["servers/", "examples", "clients", "benchers"]
