[package]
name = "queue_bench"
version = "0.1.0"
authors = ["J <joshua.lockerman@yale.edu>"]

[dependencies]
mio = "0.6"
nix = "*"
env_logger = "0.3"
libc = "0.2"
fuzzy_log = {path = "../.."}

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[features]
default = ["fuzzy_log/no_trace"]
