[package]
name = "c_link"
version = "0.1.0"
authors = ["Joshua Lockerman <joshua.lockerman@yale.edu>"]

[dependencies]
fuzzy_log = {path = "../.."}

[lib]
crate-type = ["staticlib", "dylib"]

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
