[package]
name = "java_proxy"
version = "0.1.0"
authors = ["Joshua Lockerman <>"]

[dependencies]
env_logger = "0.3"
mio = "0.6.6"
byteorder = "1.1.0"
fuzzy_log_client = {path = "../../fuzzy_log_client"}
structopt = "0.0.5"
structopt-derive = "0.0.5"

[profile.release]
opt-level = 3
debug = true
# debug = false
rpath = false
lto = false
debug-assertions = false
# debug-assertions = true
codegen-units = 1
panic = "abort"

[features]
print_stats = ["fuzzy_log_client/print_stats"]
