[package]
name = "color_alloc"
version = "0.1.0"
authors = ["Joshua Lockerman <>"]

[dependencies]
bincode = "0.8.0"
fuzzy_log_util = {path = "../../fuzzy_log_util"}
fuzzy_log_client = {path = "../../fuzzy_log_client"}
serde = "1"
serde_derive = "1"

[dev-dependencies]
fuzzy_log_server = {path = "../../fuzzy_log_server"}
