[package]
name = "server"
version = "0.1.0"
authors = ["Joshua Lockerman <joshua.lockerman@yale.edu>"]

[dependencies]
env_logger = "0.3"
log = "0.3.2"
libc = "0.2"
fuzzy_log = {path = "../.."}
#rust-dpdk = {path = "./rust-dpdk"}

[lib]
crate-type = ["staticlib"]

[profile.release]
#lto = true
opt-level = 3
rustc-args= "-C target-cpu=native"