[package]
name = "delos_tcp_server"
version = "0.1.0"
authors = ["Joshua Lockerman <joshua.lockerman@yale.edu>"]

[dependencies]
env_logger = "0.3"
log = "0.3.2"
num_cpus = "1"
mio = "0.6.6"
fuzzy_log = {path = "../.."}

[profile.release]
opt-level = 3
debug = true
rpath = false
#lto = true
lto = false
#debug-assertions = false
debug-assertions = true
codegen-units = 1
panic = 'abort'

[features]
print_stats = ["fuzzy_log/print_stats"]
