[package]
name = "fuzzy_log_server"
version = "0.1.0"
authors = ["Joshua Lockerman <joshua.lockerman@yale.edu>"]

[dependencies]
env_logger = "0.3"
log = "0.3.2"
num_cpus = "1"
mio = "0.6.6"
fuzzy_log_server = {path = "../../fuzzy_log_server"}

[features]
print_stats = ["fuzzy_log_server/print_stats"]
no_trace = ["log/max_level_info", "fuzzy_log_server/no_trace"]
