[package]
name = "zk_test"
version = "0.1.0"
authors = ["Joshua Lockerman <>"]

[dependencies]
crossbeam = "0.2.10"
rand = "0.4"
structopt = "0.0.5"
structopt-derive = "0.0.5"
zipf = "1.1.0"
zookeeper = {path = ".."}

[features]
print_stats = ["zookeeper/print_stats"]

[profile.release]
opt-level = 3
# debug = true
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = "abort"
# panic = "unwind"
